# AutonomousAuditor

./: .gitignore  Dockerfile  README.md  adk_config.yaml  app.py  docker-compose.yml  pyproject.toml  requirements.txt  test_audit.sh  test_simple.py
.github/workflows/: docker-build.yml  financial-audit.yml
auditor/: __init__.py  agent.py  document_parser.py  test_audit.py  test_balance.md  test_github.py  test_parser.py  test_workflow.py
auditor/agents/: comparison_agent.py  document_parser.py  document_retriever.py  issue_manager.py  workflow_agent.py
auditor/core/: __init__.py  adk_parser.py  adk_prompts.py  constants.py  exceptions.py  models.py  prompts.py
auditor/services/: __init__.py  audit_service.py  document_service.py  github_service.py
auditor/tests/: __init__.py  conftest.py  test_audit_flow.py  test_audit_service.py  test_document_service.py  test_github_service.py  test_prompts.py
auditor/utils/: __init__.py  formatters.py  validators.py
docs/: architecture_diagram.md  architecture_rationale.md  observability.md
tests/: test_prompts.py
