[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditor"
version = "0.1.0"
authors = [
    { name="Yury Camacho", email="camachoyury@gmail.com" },
]
description = "Un agente autónomo para auditar documentos financieros"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/camachoyury/AutonomousAuditor"
"Bug Tracker" = "https://github.com/camachoyury/AutonomousAuditor/issues" 